--- a/src/TROCAKI/TROCAKI/Views/Login/Index.cshtml
+++ b/src/TROCAKI/TROCAKI/Views/Login/Index.cshtml
@@ -114,19 +114,24 @@
 		}
 	}
 
-	document.getElementById('arquivo').addEventListener('change', function () {
-		const file = this.files[0];
-
-		if (file) {
-			const reader = new FileReader();
-
-			reader.onload = function (e) {
-				const fotoBase64 = e.target.result;
-			};
+	 function converterImagemParaBase64(inputFile) {
+	  return new Promise((resolve, reject) => {
+		const arquivo = inputFile.files[0];
+		if (!arquivo) {
+		  reject("Nenhum arquivo selecionado.");
+		  return;
 		}
-	});
 
-	document.getElementById('formulario').addEventListener('submit', function (event) {
+		const reader = new FileReader();
+
+		reader.onload = () => resolve(reader.result);
+		reader.onerror = (error) => reject(error);
+
+		reader.readAsDataURL(arquivo);
+	  });
+	}
+
+	document.getElementById('formulario').addEventListener('submit', async function (event) {
 		event.preventDefault();
 		let valido = true;
 
@@ -152,13 +157,11 @@
 
 		if (!valido) return;
 
-		const file = arquivo.files[0];
-		const reader = new FileReader();
-
-		let base64String;
-		reader.onload = function (e) {
-			base64String = e.target.result; // Base64 com prefixo
-		};
+		const fotobase64 = await converterImagemParaBase64(arquivo);
+		if (!fotobase64) {
+			alert("Não foi possível carregar a foto do documento.");
+			return;
+		}
 
 		fetch('/api/conta/cadastrar', {
 			method: 'POST',
@@ -172,7 +175,7 @@
 				cpf: cpf.value,
 				dataNascimento: nascimento.value,
 				cidade: cidade.value,
-				fotoDocumento: "123",
+				fotoDocumento: fotobase64,
 				senha: senha.value
 			})
 		})
